@@ -102,6 +102,7 @@ following names for their contribution to the product.
 * Marcin Cieślak
 * Marcus Buck
 * Marooned
+* Mathias Ertl
 * Matthew Britton
 * mati
 * Max Sikström
